<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--    <ImageView-->
    <!--        android:id="@android:id/icon"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_weight="1"-->
    <!--        android:onClick="selectImage"-->
    <!--        />-->


    <TextView
        android:id="@+id/newabout_dog"
        style="@style/text_Style.title"
        android:layout_width="match_parent"
        android:text="@string/newabout_dog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_photo_button"
        android:layout_width="141dp"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_selectpic"
        android:text="Select Photo" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext_dod"
            android:hint="name"
            android:inputType="text"
            android:paddingLeft="20dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/age"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/age"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/age_input"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/rounded_edittext_dod"
            android:ems="10"
            android:hint="age"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingLeft="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/weight"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/weight"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/rounded_edittext_dod"
            android:hint="weight"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingLeft="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/daily"
            android:layout_width="78dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/daily"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/dailyspin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/spinner_background"
            android:spinnerMode="dropdown" />

        <!--        <EditText-->
        <!--            android:id="@+id/daiy_string"-->
        <!--            android:layout_width="379dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="meals per day" />-->
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/roundbuttons"
            android:text="@string/back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/roundbuttons"
            android:text="@string/save_button" />


    </LinearLayout>


</LinearLayout>